<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.xyoye.data_component.entity.MediaLibraryEntity" />

        <import type="android.view.View" />

        <variable
            name="serverData"
            type="MediaLibraryEntity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/address_et"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_dialog_edit"
                android:gravity="center"
                android:hint="@string/hint_ip_address"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:singleLine="true"
                android:text="@={serverData.url}"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/path_et"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/background_dialog_edit"
                android:gravity="center"
                android:hint="@string/hint_smb_path"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:singleLine="true"
                android:text="@={serverData.smbSharePath}"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/display_name_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_dialog_edit"
            android:gravity="center_vertical"
            android:hint="@string/hint_display_name"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:text="@={serverData.displayName}"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/account_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_dialog_edit"
            android:gravity="center_vertical"
            android:hint="@string/hint_login_account"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:text="@={serverData.account}"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray"
            android:textSize="14sp" />

        <FrameLayout
            android:id="@+id/password_fl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_dialog_edit"
                android:gravity="center_vertical"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="80dp"
                android:singleLine="true"
                android:text="@={serverData.password}"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/password_toggle_iv"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:padding="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_input_visible" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_border_gray">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/background_border_gray"
                android:gravity="center"
                android:text="@string/tips_login_mode"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/account_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/background_button_corner_state"
                android:gravity="center"
                android:text="@string/text_account_login"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/anonymous_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/background_button_corner_state"
                android:gravity="center"
                android:text="@string/text_anonymous_login"
                android:textColor="@color/text_black"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_border_gray">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/background_border_gray"
                android:gravity="center"
                android:text="@string/text_smb_version"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/smb_v2_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/background_button_corner_state"
                android:gravity="center"
                android:text="@string/text_smb_v2"
                android:textColor="@color/text_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/smb_v1_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/background_button_corner_state"
                android:gravity="center"
                android:text="@string/text_smb_v1"
                android:textColor="@color/text_black"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_border_gray">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/background_border_gray"
                android:gravity="center"
                android:text="@string/tips_test_connect"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/server_status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/text_theme"
                android:textSize="14sp"
                tools:text="连接成功" />

            <TextView
                android:id="@+id/server_test_connect_tv"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/background_button_corner_gray"
                android:gravity="center"
                android:text="@string/action_test_server"
                android:textColor="@color/text_black"
                android:textSize="14sp" />
        </FrameLayout>
    </LinearLayout>
</layout>