<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.xyoye.data_component.entity.MediaLibraryEntity" />

        <import type="android.view.View" />

        <import type="com.xyoye.common_component.weight.binding.BindingConverter" />

        <variable
            name="serverData"
            type="MediaLibraryEntity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/scan_fl"
            android:layout_width="match_parent"
            android:layout_height="233dp"
            android:visibility="visible">

            <com.xyoye.stream_component.ui.weight.RadarScanView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="20dp"
                android:layout_gravity="center" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/device_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/input_ll"
            android:layout_width="match_parent"
            android:layout_height="233dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ip_et"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_dialog_edit"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_ip_address"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/port_et"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/background_dialog_edit"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_port"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:singleLine="true"
                    android:text="@={BindingConverter.intToString(serverData.port)}"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/display_name_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_dialog_edit"
                android:gravity="center_vertical"
                android:hint="@string/hint_display_name"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:singleLine="true"
                android:text="@={serverData.displayName}"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray"
                android:textSize="14sp" />

            <FrameLayout
                android:id="@+id/password_fl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/background_dialog_edit"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_login_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingEnd="80dp"
                    android:singleLine="true"
                    android:text="@={serverData.password}"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/text_gray"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/password_toggle_iv"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:padding="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_input_visible" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_border_gray">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_border_gray"
                    android:gravity="center"
                    android:text="@string/tips_connect_mode"
                    android:textColor="@color/text_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/password_connect_tv"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/background_button_corner_state"
                    android:gravity="center"
                    android:text="@string/text_password_connect"
                    android:textColor="@drawable/selector_text_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/direct_connect_tv"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@drawable/background_button_corner_state"
                    android:gravity="center"
                    android:text="@string/text_direct_connect"
                    android:textColor="@drawable/selector_text_black"
                    android:textSize="14sp" />
            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_border_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_rv">

            <TextView
                android:id="@+id/tv_auto_connect"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@drawable/background_button_corner_state"
                android:gravity="center"
                android:text="@string/action_auto_connect_screencast"
                android:textColor="@drawable/selector_text_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_input_connect"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/background_button_corner_state"
                android:gravity="center"
                android:text="@string/action_input_connect_screencast"
                android:textColor="@drawable/selector_text_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_scan_connect"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/background_button_corner_state"
                android:gravity="center"
                android:text="@string/action_scan_connect_screencast"
                android:textColor="@drawable/selector_text_black"
                android:textSize="14sp" />
        </FrameLayout>

    </LinearLayout>
</layout>